@@ -449,6 +449,8 @@ this. Was used when mwEmbed was going to be an extension.
   (analogous to EditFilter hook)
 * (bug 2257) Tag extensions can expand template parameters provided to the tag,
   by using a new parameter added to the recursiveTagParse function
+* (bug 14900) __INDEX__ and __NOINDEX__ no longer override site config set in
+  $wgArticleRobotPolicies.
 
 == API changes in 1.16 ==
 
